--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1028,7 +1028,7 @@ config DEBUG_BLK_CGROUP
 endif # CGROUPS
 
 config CHECKPOINT_RESTORE
-	bool "Checkpoint/restore support"
+	bool "Checkpoint/restore support" if EXPERT
 	default n
 	help
 	  Enables additional kernel features in a sake of checkpoint/restore.
@@ -1039,7 +1039,7 @@ config CHECKPOINT_RESTORE
 	  If unsure, say N here.
 
 menuconfig NAMESPACES
-	bool "Namespaces support"
+	bool "Namespaces support" if EXPERT
 	default !EXPERT
 	help
 	  Provides the way to make tasks work with different objects using
